Fix gitter title breaks into three lines

--- a/_sass/_community.scss
+++ b/_sass/_community.scss
@@ -47,7 +47,7 @@
       .community_description {
         font-size: 2.25rem;
         font-weight: 300;
-        letter-spacing: -0.5px;
+        letter-spacing: -0.6px;
         line-height: 1.16;
       }
     }
